# django-range-merge

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  docker-compose.yml  manage.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  runtests.py  setup.py  test_settings.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: pypi-publish.yml  test.yml
compose/django/: Dockerfile  start
compose/postgres/: Dockerfile
django_range_merge/: __init__.py  apps.py  models.py  urls.py
django_range_merge/migrations/: 0001_initial.py
example_project/: asgi.py  conftest.py  settings.py  test_django_range_merge.py  urls.py  wsgi.py
example_project/example/: models.py  views.py
example_project/example/migrations/: 0001_initial.py
media/: range_merge.drawio
src/django_range_merge/: __init__.py  apps.py  models.py  urls.py
src/django_range_merge/migrations/: 0001_initial.py
tests/: test_models.py
